2008-07-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/intel386.h: Undo reactoring from previous change.

2008-07-16  Jason Rumney  <jasonr@gnu.org>

        * w32gui.h: Repeat 26 June changes lost by last change.

2008-07-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* systty.h: Remove code for Aix on 386, unsupported platform.

	* s/ms-w32.h: Remove boilerplate comments.
	(fcloseall, fgetchar, flushall, fputchar, getw, putw): Remove, unused.

	* s/gnu-linux.h (TERM): Remove support.
	(HAVE_SYSVIPC): Remove, unused.
	(A_TEXT_OFFSET, A_TEXT_SEEK, ADJUST_EXEC_HEADER): Remove, not used
	for this system.

	* process.c: Remove support for IRIS, unused.
	Remove support for TERM, not relevant anymore.

	* unexalpha.c (DEFAULT_ENTRY_ADDRESS): Remove, replace the only
	used with the definition.

	* s/aix4-2.h (static): Do not undef.

	* m/ibmrs6000.h: Remove code depending on USG5_4, this file is
	only used on Aix.
	(HAVE_SYSVIPC): Remove, unused.

	* m/hp800.h (CANNOT_DUMP): Do not undef.

	* m/alpha.h: Fix comment.

	* s/usg5-4.h (HAVE_SYSVIPC): Remove, unused.
	(USG_SHARED_LIBRARIES): Remove, only used in unexec.c which is not
	used by this configuration.
	* emacs.c: Remove code depending on USG_SHARED_LIBRARIES.
	* unexec.c: Remove code depending on HPUX and
	USG_SHARED_LIBRARIES, not used with this file.  Remove code
	depending on IRIS, unused.  Remove if 0-ed code.

	* s/template.h: Remove comments about static.

	* sysdep.c: Remove code depending on NEED_PTEM_H, unused.  Remove
	if 0-ed code.
	(baud_convert): Don't depend on BAUD_CONVERT, all definitions the
	were the same as the default.
	* s/vms.h (BAUD_CONVERT): Remove, same as the default.
	Remove boilerplate comments.
	* s/hpux10-20.h (BAUD_CONVERT): Remove, same as the default.
	(HAVE_SYSVIPC): Remove, unused.
	(LD_SWITCH_SYSTEM_TEMACS): Simplify, hp9000s700 not supported anymore.

	* m/ia64.h (PNTR_COMPARISON_TYPE): Remove, same as the default.
	Remove boilerplate comments.